<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"/>


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:layout_margin="@dimen/L1_TEXT_SIZE"
        android:gravity="center"
        android:padding="@dimen/L1_TEXT_SIZE"
        android:text="@string/welcome_new_user" />

    <LinearLayout
        android:layout_below="@id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtGetDiscounts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/BUTTON_WIDTH"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/L1_TEXT_SIZE"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:padding="@dimen/L1_TEXT_SIZE"
            android:text="@string/welcome_discounts_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtEarn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/BUTTON_WIDTH"
            android:layout_gravity="center"
            android:layout_margin="@dimen/L1_TEXT_SIZE"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="@dimen/L1_TEXT_SIZE"
            android:text="@string/welcome_earn_text"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>