<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/HEADER_SIZE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/SMALL_STD_MARGIN"
            android:layout_marginRight="@dimen/SMALL_STD_MARGIN"
            android:orientation="vertical"
            android:padding="@dimen/STD_PADDING">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/STD_MARGIN"
                android:layout_marginLeft="@dimen/STD_MARGIN"
                android:layout_marginRight="@dimen/STD_MARGIN">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="@dimen/VS_TEXT_SIZE"
                        android:singleLine="false"
                        android:text="@string/referral_system_intro_detail1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/M_TEXT_SIZE" />
                    
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/STD_MARGIN"
                        android:background="@color/grey"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="@dimen/VS_TEXT_SIZE"
                        android:singleLine="false"
                        android:text="@string/referral_system_intro_detail2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/M_TEXT_SIZE" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/STD_MARGIN"
                        android:background="@color/grey"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="@dimen/VS_TEXT_SIZE"
                        android:singleLine="false"
                        android:text="@string/referral_system_intro_detail3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/M_TEXT_SIZE" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/STD_MARGIN"
                        android:background="@color/grey"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="@dimen/VS_TEXT_SIZE"
                        android:singleLine="false"
                        android:text="@string/referral_system_intro_detail4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/M_TEXT_SIZE" />


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearSignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/VS_TEXT_SIZE"
                android:src="@drawable/ic_signup" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="3"
                android:singleLine="false"
                android:padding="@dimen/STD_MARGIN"
                android:text="Join Now!\nQuick SignUp"
                android:textColor="@color/white"
                android:textSize="@dimen/M_TEXT_SIZE" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:background="@color/white"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/linearCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:paddingLeft="@dimen/VS_TEXT_SIZE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calculator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="3"
                android:singleLine="false"
                android:padding="@dimen/STD_MARGIN"
                android:text="Calculate The Referral Earning Ladder"
                android:textColor="@color/white"
                android:textSize="@dimen/M_TEXT_SIZE" />

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>